<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_messenger_addchat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LoginTheme"
    tools:context=".Messenger.AddChatFragment">


    <EditText
        android:id="@+id/edittext_addchat_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="56dp"
        android:drawableStart="@drawable/ic_mail_outline_blue_24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/login_chatHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_addchat_prompt" />


    <Button
        android:id="@+id/button_addchat_add"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/round"
        android:text="@string/new_contact_add"
        android:textColor="@color/messageText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_addchat_email" />

    <TextView
        android:id="@+id/textview_addchat_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/addchat_prompt"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>