<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".Main.TemoraryPassSendFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editText_temporarypassword_email"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="324dp"
        android:drawableStart="@drawable/ic_mail_outline_blue_24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/login_emailHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_temporarypassword_reset"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="148dp"
        android:background="@drawable/round"

        android:text="@string/temoraryPassword_reset"
        android:textColor="@color/messageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_temporarypassword_email" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/password_reset_prompt"
        android:textAlignment="center"
        android:textColor="@color/messageText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_temporarypassword_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

</android.support.constraint.ConstraintLayout>