<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/LoginTheme"
    tools:context=".Main.ResetPassword">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id="@+id/editText_resetPassword_temorarypassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="45dp"
        android:drawableStart="@drawable/ic_lock_blue_24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/edittext_temporarypassword"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_resetPassword_newPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:drawableStart="@drawable/ic_lock_blue_24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/login_passwordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_resetPassword_temorarypassword" />

    <EditText
        android:id="@+id/editText_resetPwd_passwordAgain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:drawableStart="@drawable/ic_lock_blue_24dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/login_passwordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_resetPassword_newPassword" />

    <Button
        android:id="@+id/btn_resetpwd_changepwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_reset_password_change"
        android:textColor="@color/messageText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_resetPwd_passwordAgain" />
</android.support.constraint.ConstraintLayout>